syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "Workflows.Models.Spec";

message Step {
  string computeImage = 1;
  string dataSource = 2;
  string dataSink = 3;
}

message Workflow {
  repeated Step steps = 1;
}

message RegisterWorkflowRequest {
  Workflow workflow = 1;
}

message RegisterWorkflowReply {
  string workflowId = 1;
}

message GetWorkflowRequest {
  string workflowId = 1;
}

message GetWorkflowReply {
  Workflow workflow = 1;
}

service WorkflowRegistrationService {
  rpc RegisterWorkflow (RegisterWorkflowRequest) returns (RegisterWorkflowReply)
  {
    option (google.api.http) = {
      post: "/v1/workflows"
      body: "*"
    };
  }
  
  rpc GetWorkflow (GetWorkflowRequest) returns (GetWorkflowReply)
  {
    option (google.api.http) = {
      get: "/v1/workflows/{workflowId}"
    };
  }
}

